<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <AutoCompleteTextView
        android:id="@+id/dbfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/simulateDb"
        android:inputType="text" >
    </AutoCompleteTextView>

    <EditText
        android:id="@+id/edit_text"
        android:layout_below="@+id/dbfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/defaut_rate"
        android:inputType="numberDecimal" >
    </EditText>

    <TextView
        android:id="@+id/fake_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_world"
        android:textColor="#FFCC00"
        android:textSize="16sp" >
    </TextView>

</RelativeLayout>